--- a/my-appp/package.json
+++ b/my-appp/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "mongodb": "^6.16.0",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
